--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <title>JQuery, CRUD Operation</title>
+    <link rel="stylesheet" href="css/style.css">
     <script src="js/jquery-3.6.3.min.js"></script>
 </head>
 <body>
@@ -16,35 +17,51 @@
     <div class="container my-5">
         <form action="#" method="post" class="row g-3">
             <div class="col-md-6">
-                <label for="productId" class="form-label">Product ID</label>
+                <label for="productId" class="form-label">Product ID <span class="spanText" id="errorMessageId"></span></label>
                 <input type="text" class="form-control" name="productId" id="productId" required>
             </div>
             <div class="col-md-6">
-                <label for="ProductName" class="form-label">Product Name</label>
+                <label for="ProductName" class="form-label">Product Name <span class="spanText" id="errorMessageName"></span></label>
                 <input type="text" class="form-control" name="ProductName" id="ProductName" required>
             </div>
             <div class="col-md-6">
-                <label for="selectImage" class="form-label"> Select Image</label>
-                <input class="form-control" type="file" id="image" required>
-            </div>
-            <div class="col-md-6">
-                <label for="Price" class="form-label">Price</label>
+                <label for="Price" class="form-label">Price <span class="spanText" id="errorMessagePrice"></span></label>
                 <input type="text" class="form-control" id="price" required>
             </div>
-            <div class="col-12">
+            <div class="col-md-6">
+                <label for="selectImage" class="form-label"> Select Image <span class="spanText" id="errorMessageImage"></span></label>
+                <input class="form-control" type="file" id="image" onchange="changeImage()" required>
+            </div>
+            <div class="col-6">
                 <label for="Description" class="form-label">Description</label>
                 <textarea class="form-control" id="description" rows="3" required></textarea>
             </div>
-            <div class="col-12">
-                <button type="button" class="btn btn-primary" onclick="formData()">Submit</button>
+            <div class="col-6 btnEdit" id="showImage"> </div>
+            <div class="col-12 btnAddProduct" id="btnSubmit">
+                <div class="d-flex justify-content-end">
+                    <button type="button" class="btn btn-primary m-1" onclick="validateform(this.id)" id="add">Add Product</button>
+                    <input class="btn btn-primary m-1" type="reset" value="Reset">
+                </div>
+            </div>
+            <div class="col-12 btnEdit" id="btnUpdate">
+                <div class="d-flex justify-content-end">
+                    <button type="button" class="btn btn-primary m-1" onclick="validateform(this.id)" id="edit">Update</button>
+                    <input class="btn btn-primary m-1" type="reset" value="Reset">
+                </div>
             </div>
         </form>
     </div>
     <hr>
     <div class="container my-2">
         <form action="#">
-            <input type="text" id="dataFilter" placeholder="Enter id to search">
-            <button type="button" class="btn btn-primary" onclick="getStoreData(this.id)" id="ser">search</button>
+            <div class="row">
+                <div class="col-3">
+                    <input type="text"  class="form-control" id="dataFilter" placeholder="Enter id to search">
+                </div>
+                <div class="col-3">
+                    <button type="button" class="btn btn-secondary" onclick="getStoreData(this.id)" id="ser">search</button>
+                </div> 
+            </div>    
         </form>
     </div>
     <div class="container my-7">
@@ -52,9 +69,17 @@
             <thead>
                 <tr>
                     <th scope="col">Product ID</th>
-                    <th scope="col" onclick="getStoreData(this.id)" id="pName">Product Name</th>
+                    <th scope="col" onclick="getStoreData(this.id)" id="pName">Product Name 
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-filter" viewBox="0 0 16 16">
+                            <path d="M6 10.5a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 0 1h-3a.5.5 0 0 1-.5-.5zm-2-3a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5zm-2-3a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11a.5.5 0 0 1-.5-.5z"/>
+                        </svg>
+                    </th>
                     <th scope="col">Image</th>
-                    <th scope="col" onclick="getStoreData(this.id)" id="pricePro">Price</th>
+                    <th scope="col" onclick="getStoreData(this.id)" id="pricePro">Price 
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-filter" viewBox="0 0 16 16">
+                            <path d="M6 10.5a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 0 1h-3a.5.5 0 0 1-.5-.5zm-2-3a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5zm-2-3a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11a.5.5 0 0 1-.5-.5z"/>
+                        </svg>
+                    </th>
                     <th scope="col">Description</th>
                     <th scope="col">Action</th>
                 </tr>
