update search code

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <input type="text"  class="form-control" id="dataFilter" placeholder="Enter id to search">
                 </div>
                 <div class="col-3">
-                    <button type="button" class="btn btn-secondary" onclick="getStoreData(this.id)" id="ser">search</button>
+                    <button type="button" class="btn btn-secondary" onclick="getStoreData(this.id)" id="searchById">search</button>
                 </div> 
             </div>    
         </form>
